[tool.poetry]
name = "macnotesapp"
version = "0.8.1"
description = "Work with Apple MacOS Notes.app from the command line. Also includes python interface for scripting Notes.app from your own python code."
authors = ["Rhet Turnbull <rturnbull@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/RhetTbull/macnotesapp"
repository = "https://github.com/RhetTbull/macnotesapp"
keywords = ["cli", "mac", "macos"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
py-applescript = "^1.0.3"
click = "^8.1.2"
rich = ">=12.4.4,<=14.0.0"
markdown2 = ">=2.4.3,<3.0.0"
toml = "^0.10.2"
questionary = ">=1.10.0,<=3.0.0"
wheel = ">=0.37.1"
readability-lxml = "^0.8.1"
requests = ">=2.28.1,<3.0.0"
validators = ">=0.20.0,<1.0.0"
markdownify = ">=0.11.6,<1.0.0"
pyobjc-framework-ScriptingBridge = ">=9.0.1"
xdg-base-dirs = ">=6.0.0"
lxml-html-clean = ">=0.1.1"
lxml = ">=5.2.1,<6.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2,<=8.0.0"
cogapp = ">=3.3.0"
wheel = ">=0.37.1"
build = ">=0.8.1"
pyinstaller = ">=6.6.0"

[tool.poetry.scripts]
notes = "macnotesapp.__main__:cli_main"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
mktestdocs = ">=0.2.4"
mkdocs = ">=1.6.1"
mkdocs-click = ">=0.8.1"
mkdocstrings = ">=0.27.0"
mkdocstrings-python = ">=1.12.2"
mkdocs-material = ">=9.5.49"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
