[project]
name = "macnotesapp"
version = "0.8.1"
description = "Work with Apple MacOS Notes.app from the command line. Also includes python interface for scripting Notes.app from your own python code."
authors = [{ name = "Rhet Turnbull", email = "rturnbull@gmail.com" }]
license = "MIT"
readme = "README.md"
keywords = ["cli", "mac", "macos"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "py-applescript>=1.0.3,<2.0.0",
    "click>=8.1.2,<9.0.0",
    "rich>=12.4.4,<=14.0.0",
    "markdown2>=2.4.3,<3.0.0",
    "toml>=0.10.2,<0.11.0",
    "questionary>=1.10.0,<=3.0.0",
    "wheel>=0.37.1",
    "readability-lxml>=0.8.1,<0.9.0",
    "requests>=2.28.1,<3.0.0",
    "validators>=0.20.0,<1.0.0",
    "markdownify>=0.11.6,<1.0.0",
    "pyobjc-framework-ScriptingBridge>=9.0.1",
    "xdg-base-dirs>=6.0.0",
    "lxml-html-clean>=0.1.1",
    "lxml>=5.2.1,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/RhetTbull/macnotesapp"
Repository = "https://github.com/RhetTbull/macnotesapp"

[project.scripts]
notes = "macnotesapp.__main__:cli_main"

[dependency-groups]
dev = [
    "pytest>=7.1.2,<=8.0.0",
    "cogapp>=3.3.0",
    "wheel>=0.37.1",
    "build>=0.8.1",
    "pyinstaller>=6.6.0",
    "bump2version>=1.0.1,<2.0.0",
    "mktestdocs>=0.2.4",
    "mkdocs>=1.6.1",
    "mkdocs-click>=0.8.1",
    "mkdocstrings>=0.27.0",
    "mkdocstrings-python>=1.12.2",
    "mkdocs-material>=9.5.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
